--- a/link02.html
+++ b/link02.html
@@ -48,6 +48,9 @@ You can contact Retter2012.com Team through jobnet@188.com
 <font size=5>
 <br><br>
 
+<a href= "link01.html">中国崛起的四个问题</a><br><br>
+<a href= "link03.html">大国不能小心眼</a><br><br>
+<a href= "link05.html">“文革”后的逆袭与重续</a><br><br>
 
 傅莹<br><br>
 2014-08-26  <br><br>
@@ -127,6 +130,7 @@ You can contact Retter2012.com Team through jobnet@188.com
 <br><br>
 随后的周末，东德当局宣布设置10个新的边境出入口，包括一些具有历史意义的地点，例如波茨坦广场等。许多人等在这些地方，看到推土机开出来恢复原有的道路时，欢呼开来。
 <br><br>
+<a href= "link05.html">“文革”后的逆袭与重续</a><br><br>
 
 直到1990年中期，一直在设立新的出入口。期间的1989年12月22日，在超过十万人的欢呼声中，时任西德总理的赫尔穆特 科尔由西往东走过勃兰登堡门，东德最后一任总理汉斯 莫德罗在门的另一端迎接他，标志着勃兰登堡门再次开放。西德人也在12月23日开始无需护照即可进入东柏林。隔离区被完全拆除，人们在勃兰登堡门前的柏林墙上跳舞庆祝。
 <br><br>
@@ -211,6 +215,7 @@ You can contact Retter2012.com Team through jobnet@188.com
 现在陈谦平每隔一两年要去一次德国，他喜欢柏林，这座城市给他带来安全感。但偶尔也有物是人非之感，尤其是看着勃兰登堡门两侧建筑拔地而起，空地上建起了犹太人大屠杀纪念馆，立满墓碑。国会旁边原来的空地上盖起了总理府：“原来视线越过那片空地就是波茨坦广场，可以看到女神像。”
 
 <br><br>
+古之学者为己，今之学者为人。我们用心做，您来细细品。您也可以<a href= "http://www.retter2012.com" title="点击进入"> 先下载一个</a>应用程序（App），有空再慢慢看。<br><br>
 
 马云：金庸才是我的偶像
 <br><br>
@@ -247,6 +252,104 @@ You can contact Retter2012.com Team through jobnet@188.com
 
 
 
+<a href= "link03.html">大国不能小心眼</a><br><br>
+<a href= "link04.html">全面推进依法治国</a><br><br>
+香港“占中”背后的精神角斗<br><br>
+
+——从法国媒体看非法“占中”的性质和目的<br><br>
+
+ 
+
+郑若麟<br><br>
+《文汇报》高级记者<br><br>
+
+在西方主导着话语权、道义评判权和历史解释权的当今世界，我们对国际上的大多事务都难以及时洞悉其发生之缘由和目的。我们总是在过了很久才发现，原来某桩历史事件的发生并非“偶然”；而当西方媒体对其大肆炒作时，更是有着用心深刻的目的和原因。
+<br><br>
+从香港非法“占中”行动的发生，以及西方媒体对其报道趋势和动向，我们可以清晰地看到，西方对中国正在进行的就是一场以意识形态为旗帜、以媒体为武器的舆论较量。说“较量”其实是用词谨慎。其实质是一场思想战争。在今天，核大国之间已经没有了通过武器进行征服的任何可能性。因此，在美国和某些西方人士看来，要杜绝中国挑战美国世界霸权的惟一方式，是通过打赢一场“心战”，使中国自动失去挑战美国的能力。尽管中国并没有挑战美国霸权的野心，但美国和西方历来“以己度人”，就如“上帝以自己的形象造人”一样，美国和某些西方人士是必然要认定中国欲与之争霸的；所以中国再表白，他们也绝不会相信。
+<br><br>
+这次香港发生的非法“占中”事件，就是一场中美之间的精神角斗。香港只是战场而已。这一点，从西方媒体对这一事件的炒作方式就可以非常清晰地看出来。<br><br>
+
+从一开始，法国《解放报》就在头版头条位置用“香港之春”的大标题来为这场非法“占中”行动定性。其副标题是“北京当局开始担心由香港大学生掀起的这股民主大浪将会席卷整个中国……”，这显然是在为“雨伞革命”定性并挑明其最终目标。<br><br>
+法国《解放报》就在头版头条位置用“香港之春”的大标题来为这场非法“占中”行动定性<br><br>
+
+事实上，某些西方媒体在报道这场非法“占中”行动上，确实是不遗余力、全力以赴；其规模和方式早就超出正常新闻报道的范畴，更像是在进行着一场针对中国大陆的真正的“思想战”。而《解放报》的上述头版就这场思想战的纲领。很多不太了解西方媒体运作方式的读者会想当然地认为，西方媒体是自由的，所以不可能有一律的报道方针。确实，西方没有“宣传部”来下指令。但“自由的”西方媒体在涉及对外报道、特别是对中国的报道时，却往往惊人地一致。西方业内人士其实心知肚明，他们的媒体总是有一些“媒体风向标”的存在。如美国《纽约时报》、法国《世界报》、《解放报》就是这种特殊的风向标。这些媒体报道的中国，往往会被其他媒体、特别是电视媒体所遵循。上述“香港之春”的标题就是一种“定调”。<br><br>
+
+在对这场非法“占中”行动定完调之后，一切报道就“顺理成章”：既然是“香港之春”，那么报道的道德立场已经确定：非法“占中”永远有理而中国当局永远无理。于是，一切都将围绕着这一道德立场展开。而其最终目标也就是“使民主大浪席卷整个中国”。总结西方媒体到目前为止对非法“占中”报道的规律，可以看出从整体上而言，确实是一面倒地将事件朝着上述方向引导。其中以下几个领域极为吸引眼球：
+<br><br>
+一是突出“颜色革命”的所谓“天然合法性”来掩饰“占中”运动的实际“非法”性。如法国某电视台在报道时故意用“香港人欲通过这场占中行动重新找回他们的自由和民主”的说法，来暗示是“中共剥夺了香港人的民主与自由权力”，而完全无视香港作为英国殖民地，150年来从来就没有选举过行政长官的铁的事实。<br><br>
+
+二是突出中国当局与香港学生之间的矛盾，将后者的运动形容推翻前者的前兆。在法国BFM电视台采访时，播出了一名香港学生所说的这样一句话：“北京想把他们的意志强加给香港，我们不答应。香港不是中国。”这是公然在挑衅“一国两制”的“基本法”原则，试图让西方舆论认为，香港与中国不是一个国家，就像很多西方媒体从来将西藏作为一个“独立国家”来报道的那样。
+<br><br>
+三是将香港反对“占中”的“沉默的大多数”套上“中共支持的黑社会”的大帽子，试图掩盖这场非法“占中”行动的不得人心，蓄意地欺骗西方舆论。很多西方媒体在不得不提到香港民众自发起来反对非法“占中”行动时，都特意突出（但又不敢直言，因为没有证据）“反占中”群众中有“疑似黑社会”的面孔，或“说普通话的人”（暗示是大陆派来的）。
+<br><br>
+四是鼓励和支持非法“占中”进行到底，将香港这场运动说成是“民主与独裁的决斗”。在香港任教的法国人让—彼埃尔·卡贝斯坦（Jean-Pierre Cabestan）公开声称，尽管法国与欧洲需要与中国合作做生意，但却绝不能对这场意识形态斗争“袖手旁观”。
+<br><br>
+五是运用一些“细节用语”，来歪曲历史和事实，误导西方舆论，试图让西方舆论相信，“正义”是在非法“占中”行动一边。比如声称“学生们的饮水和用餐都是市民自愿捐献的”（暗示非法“占中”行动得到多数民众支持）、突出学生“自己管理卫生清扫”，以强调学生的理性来反衬官方的“野蛮”……而对不利于非法“占中”行动的信息则有意忽略，如只字不提有关学生领袖和幕后组织者得到美国某些机构的支持和资助的事实、同时对有关民意调查证明“反占中”人数比例高达70%以上的信息则视而不见……等等。
+<br><br>
+我们不得不承认，在香港非法“占中”行动这场舆论战中，我们在西方阵营面前溃不成军……今天，全世界舆论中的主流，是同情非法“占中”行动的。<br><br>
+
+假如非法“占中”者得逞……<br><br>
+
+我在上一篇文章中曾指出，西方是如何运用“逆推”“黑天鹅效应”来研究如何才能使中国在2023年前后崩溃。
+<br><br>
+假如我们也来根据“黑天鹅效应”原理进行逆推，则可以清楚地看到，这场非法“占中”行动最终目的就是一个：将香港独立出去的“颜色革命”；并通过香港的“颜色革命”，进而扰动中国大陆政局。<br><br>
+我们先做出假定推断：香港非法“占中”行动得逞，2017年特首普选方式改变，出现一名反华候选人。那么我们可以断言，不管这位候选人最终得票是多少，只要他没能赢得选举，必定出现一场新的“颜色革命”，其籍口必然是“选举作弊”，其口号必然是“公正重选”。届时将再次出现以“重选”为目标的非法“占中”行动。显然，当今天港府无法解决目前的这场打着“要真普选”的非法“占中”行动的话，很难想象届时会有能力解决一场新的“要重选”的非法“占中”行动。其结果只有一再重选，直到反华候选人当选特首为止。一旦这一幕出现，将会大大鼓励境内外的“民主势力”。中国境内的“颜色革命”将无疑会随之爆发。后果可以想象。<br><br>
+
+如果出现这一幕，那么上次我的文章中所描述的发生在2023年的中国事件，就有可能不幸预言成真。<br><br>
+
+那么我们也来“逆推”一下“黑天鹅效应”，来看一看非法“占中”行动在什么样的条件下会成功，我们也就能反其道而行之。首先，非法“占中”行动必须坚持到底，直到达到改变普选方式、使反华人士能够成为特首候选人为止。坚持非法“占中”，正是目前“雨伞革命”的组织的首要目标。<br><br>
+
+其次，非法“占中”行动必须不断升级。特别是口号升级，因为只有不断升级，要价不断提高，才能杜绝任何和平、理性解决的可能性，才能走向下一个目标：引发暴力。<br><br>
+
+第三，必须引发暴力（最好有伤亡），然后将暴力的罪名嫁祸于港府——北京。以此进一步激发舆论反华，特别是争取港内外对“受害者（即学生）的同情和支持。众所周知，在这场非法“占中”行动中，不仅参与者绝大多是年轻的大学生，甚至包括很多更为年轻的中学生（好操纵、易冲动、更具暴力倾向），更有甚者，现场还出现了很多儿童。其目的太过明显：就是要挑动香港警方犯错误，误伤哪怕一名儿童；届时就必然会出现“警方对儿童施暴”的夸大宣染，以争取香港和西方舆论的进一步同情和支持。众所周知，全球舆论历来都对“向儿童使用暴力”是最为深痛恶绝的。香港警方能够迄今为止未掉进圈套，实在证明了其克制、温和到了何种地步。但反过来，警方的克制也为非法“占中”的行动者和组织者以最大的自由活动空间，从而使非法“占中”行动得以一再发酵。<br><br>
+
+第四，非法“占中”行动将必然是“说一套、做一套”，口号上妥协而行动上激化，以达到步步升级的目的。如果港府当局被非法“占中”组织者的口号所迷惑的话，就必然会步步被动，直到跌入对方预设的陷阱之中。如果我们深入观察的话，就可以发现，每次非法“占中”行动在关键点的时候，都会出现一些“意外”的细节；实质上这才是非法“占中”组织者真正的“杀手锏”，这样才能使矛盾步步激化、步步升级。如9月26日真正使非法“占中”行动朝着冲突方向转化的，就是一个非常“小”的细节：在相对平静的集会快结束时，非法“占中”行动组织者黄之锋突然用“扩音器”高喊“重夺公民广场”，并率先翻过围栏和警戒线，挑衅警方；在场显然是预先布置好的两百名激进学生立即随之跟进，从而使这场本来平和的示威立即升级为双方的激烈冲突。在10月中旬学生与港府达成对话协议、非法“占中”行动进入低潮时，学生组织者突然以“莫须有”的借口中止与港府的对话，使双方冲突重新泛起。在所有“颜色革命”中，这是屡见不鲜的招数。<br><br>
+
+第五、非法“占中”行动必须有外界秘密资金支持。任何公众行动都必须有充足的资金保障。香港这次的非法“占中”行动显然已经得到了大量的外部资金的支持，而且资金已经到位，否则单凭学生自己的能力是不可能维持如此之久的。<br><br>
+
+第六、非法“占中”行动必须得到尽可能多的香港民众的支持。<br><br>
+
+第七、必须引诱港府犯错误，特别是要挑动中央与港府之间的分歧。单靠学生这点单薄的力量，是无法达到非法“占中”、改变普选方式的目的的。只有在港府和中央之间打出一道裂缝，使港府转向支持学生，非法“占中”行动才能达到目的。<br><br>
+
+中国大陆无法独善其身<br><br>
+
+我们在应对这场“舆论战争”时，根据对“黑天鹅效应”的逆推，我们得知非法“占中”行动欲得逞的六大要素。那么我们在应对时就要反其道而行之。<br><br>
+
+首先要清晰地让非法“占中”行动的组织者和幕后策划者知悉，中央绝不会在原则问题上做出任何让步，就像法国数百万反同性恋结婚的民众上街进行了长达半年多的示威，也无法改变法国国民议会投票通过允许同性恋结婚的法律一样。
+<br><br>
+其次，防止冲突升级的惟一途径，就是在细节问题同样坚持原则立场，不轻易做出任何让步。任何谈判都会导致某种程度上的妥协。但这一妥协必须是在不会造成对方提高要价的借口的前提下才能做出。
+<br><br>
+第三，要对非法“占中”行动可能出现的任何意外、特别是暴力冲突前景，做出充分预案，以防万一。
+<br><br>
+第四，要在对非法“占中”行动的媒体报道中占据主动，要主动提出话题，主动引导报道方向，主动引导舆论导向。应该指出的是，这一点，香港警方表现出色。当示威队伍中出现儿童时，香港警方及时谴责示威者将儿童劫为“人质”；香港警方还主动出击，向舆论摆明“非法占中”才是暴力冲突的根源。<br><br>
+
+第五当然非常明确，必须彻底切断非法“占中”行动的境外资金来源。这一点说来容易，但做起来却难度甚大，必须综合多个部门（警方、金融、财会……）的专业力量，才有可能做到。
+<br><br>
+第六，要密切关注香港民众的动态。民众对运动的支持是会变化的。目前当非法“占中”行动损害了市民的利益时，他们反对；但一旦情况发生变化，民众也会随之而变……<br><br>
+
+第七当然就是要竭尽全力保持港府与中央的一致，这是不言而喻的。<br><br>
+
+在做好这六点的前提下，最为重要的则是如何在舆论上对非法“占中”行动战而胜之。非法“占中”行动有一个阿尔喀斯之踵：“非法”。必须反复强调“占中”的非法性质，才能赢得舆论的支持。细心的读者一定注意到，本文在提到“占中”时，一定加上“非法”两字。我们不应该因为这是显而易见的事实，就忽略或省略它。相反，我们应该时时刻刻强调它，只有在人人都明白并理解了“占中”是非法行动，而任何非法行动都是对民主的破坏时，对非法“占中”行动的斗争才能获得胜机。<br><br>
+
+但非法“占中”行动却在舆论上正在赢得香港年轻一代的支持。因为他们相信了西方的普世价值观念。经历过殖民时代的香港中、老年一代大多不信任西方，但年轻一代却没有这种切身的体验。他们既没有经历过六七惨案，也不知道港人一直到七十年代时在自己的领土上却一直是二等甚至是三等公民（英国人甚至印度人都比港人“高一等”）……在这种背景下，这场“舆论战争”的艰巨性和长期性是不言而喻的。
+<br><br>
+我个人认为，舆论战实质上是一场“洗脑”和“反洗脑”的斗争。非法“占中”行动的洗脑方式是“真民主是港人的权利”，你去与之争论“提名权”、“特首爱不爱国”等等是徒然的，因为没有港人（甚至包括反占中人士）会反对争取“真民主”。循着这个思路，我们就会步步败退。“反洗脑”的关键在于“非法”！“任何非法行动都无法导向真民主”，才是这场战争的胜负手。当多数港人认识到“任何非法行动都无法导向真民主”时，这场舆论战我们才能胜券在握。<br><br>
+
+舆论导向是一门深刻的艺术，我无法一一列述。<br><br>
+
+更令人担忧的是，这场以香港为战场的“舆论战争”实际上已经进入中国大陆。一些以“中立”、“温和”面目而著称的中文外国媒体已经从某种意义上来说，成为中国的“舆论风向标”。有多少中国媒体主管是读着外媒中文网来决定自己的报道主题和方向的？要知道这些网站的影响力有多大，有需要研究一下这些网站的观点（甚至包括一些用语方式）在多大程度上影响中国媒体即可窥一斑。
+<br><br>
+当然，我并不反对中国媒体人阅读这些网站，但我希望的只是中国媒体人在阅读这些网站时多一个心眼、多一点自己的（批判性）思考而已。法国大哲学家萨特在“拒绝一切来自官方的荣誉”时，这一“官方”包括东方、也同样包括西方在内。我们难道不应在接受任何信息时，都抱着“怀疑一切”的态度去过滤吗？如果我们不能做到这一点，我们离一场新的“（舆论）甲午战争”就不远了……<br><br>
+
+<a href= "link05.html">“文革”后的逆袭与重续</a><br><br>
+
+香港《星岛日报》报道，违法“占中”行动持续逾月，香港保安局局长黎栋国昨天（29日）在书面答覆立法会议员提问时表示，截至10月27日，警方就“占中”有关的非法集结及其所衍生的违法行为合共拘捕了332人。<br><br>
+
+黎栋国指出，连日来大量“占中”示威者违法堵塞主要交通干道，严重影响交通及市民的日常生活，他们造成的滋扰引发市民及部分行业人士的严重不满，引致近日在非法集结范围持不同意见人士的连串口角甚至暴力冲突。<br><br>
+
+黎栋国说，截至2014年10月27日，警方就“占中”有关的非法集结及其所衍生的违法行为合共拘捕了332人，涉嫌罪行包括非法集会、管有攻击性武器、袭警、拒捕、刑事毁坏、在公众地方打斗、疯狂驾驶、刑事恐吓、企图盗窃、纵火等。<br><br>
+
+香港警察公共关系科总警司许镇德在29日记者会上表示，9月26日至今已有64名警务人员受伤，呼吁示威人士表达诉求时保持和平理性。<br><br>
 
   
 梁振英为有关香港选举言论表示遗憾  <br><br>
@@ -284,6 +387,11 @@ You can contact Retter2012.com Team through jobnet@188.com
 香港政府坚称，这一制度是《基本法》（香港的宪制文件）规定的，这让他们没有改变的余地。
 <br><br>
 然而，香港末任总督彭定康(Chris Patten)周二在《Project Syndicate》上发表评论文章指出，梁振英有着“相当大的回旋空间”，呼吁他“展示一些政治家的水平”。<br><br>
+<a href= "link01.html">中国崛起的四个问题</a><br><br>
+<a href= "link03.html">大国不能小心眼</a><br><br>
+<a href= "link04.html">全面推进依法治国</a><br><br>
+<a href= "link05.html">“文革”后的逆袭与重续</a><br><br>
+<a href= "link06.html">图书馆的“阅读规则”</a><br><br>
 
 
 江平：依法治国是一个长期任务	<br><br>
@@ -333,6 +441,7 @@ You can contact Retter2012.com Team through jobnet@188.com
 我们现在对于司法公开的要求越来越高，现在提出审判程序都要公开。而且最高法已经讲了，所有的审判文书都应该公开。对于腐败分子的审判更应该公开，这是老百姓关心的事情。	<br><br>
 本文由财新记者 林韵诗采访整理。	<br><br>
 
+<a href= "link07.html">宏观经济学的科学家与工程师</a><br><br>
 
 郭宝昌：我与《大宅门》<br><br>
 
@@ -393,6 +502,8 @@ You can contact Retter2012.com Team through jobnet@188.com
  
 电视剧《大宅门》即将与观众见面，我献上的不仅仅是一部剧，而是我生命的全部。 
 <br><br>
+<a href= "link07.html">宏观经济学的科学家与工程师</a><br><br>
+<a href= "link01.html">中国崛起的四个问题</a><br><br>
 
 “九段线”只是一个表象	<br><br>
 作者：南方周末记者 郭丝露  南方周末实习生 黄心宇  	<br><br>
@@ -493,6 +604,11 @@ Hoo Tiang Boom认为，越南肯定不会对中国有军事上的行为。但也正是这点使越南人民“很
  张业遂也好，傅莹也罢，以他们代表的中国外交官在近几年的进步是显而易见的，但这一进步主要体现在公关活动和形象包装上，属于技术层面的小进步。如果指望通过技术层面的小进步就能够扭转外交上的根本被动态势，恐怕是要大失所望了。	<br><br>
 事实上，被国内热捧的傅莹模式在英国所收到的回应远不像国内媒体描述的那样乐观。政商界更多地是将傅莹的言行视作中国与国际接轨的一种积极表现，至于刊载傅莹文章的媒体，态度则审慎得多。美国史上臭名昭著的麦卡锡善于鼓动利用媒体，但登过他文章的美国报纸恐怕没谁会认可他的主张——美国媒体后来感到被麦卡锡愚弄了。	<br><br>
 外交技术的进步对中国有益，但不能代替战略层面的改良。1995年希拉里出席世界妇女大会时指责中国人权，国内针对极具煽动性的美式演讲法抛出过一个“熊蕾式演讲法”应对，但效果微弱。胡锦涛主席去年提出要改善我国的道义形象，杨洁篪部长今年初也提出了影响力、竞争力、亲和力、感召力“四要求”，这些都不是在外媒发几篇文章就能搞定的。譬如一个冯正虎事件，就得外交部解释半天。作为中国外交的具体执行者，外交部在技术层面改善提升是分内之事，至于摆脱外交被动，就要决策层多花心思了。	<br><br>
+
+Retter2012，我们提供“更快的速度”和“更好的内容”。<br><br>
+<a href="http://www.retter2012.com/">Retter is Better</a>, WE Create and Deliver Real Value!<br><br>
+
+
 傅莹方式  	<br><br>
   新华网 （ 2010-01-29  	<br><br>
 【核心提示】	<br><br>
