--- a/link03.html
+++ b/link03.html
@@ -54,6 +54,12 @@ You cannot discover new oceans; you do not have the courage to lose sight of the
 2. 在规则内挑战极限<br><br>
 3. 以道德Right反规则Law<br><br>
 
+<a href= "link04.html">全面推进依法治国</a><br><br>
+<a href= "link05.html">“文革”后的逆袭与重续</a><br><br>
+
+西方多元领导，制约平衡。中国一元统治，调和中庸。<br><br>
+英美善爬（Sharma），中国善跑；国际竞争，扬长避短。<br><br>
+
 
 	您也可以<a href= "http://www.retter2012.com" title="点击进入"> 先下载一个</a>应用程序（App），有空再慢慢看。<br><br>
 
@@ -79,6 +85,9 @@ Edmund Burke	<br><br>
 在美利坚殖民地出现反英运动之初，英国的开明思想家和政治家，即认为殖民地人民有权那么做，因此他们反对压制和动武，主张对话解决。可惜他们的主张不被采纳，最后遂使情势一直恶化，美国终于脱英独立。柏克在《独立宣言》的前一年，即1775年的那篇演说，用心非常良苦，他直言，如果动武，殖民地人民对英国的感情就会被伤到，合理的对话空间就会失去。	<br><br>
 最重要的是他指出，“一个大帝国和小心眼乃是并存的疫病”。他认为当时英国已成了新兴的大帝国，因此英国已不能再像以前那样的小心眼，而应提高自己的国家高度，形成大心胸，向世人证明英国也是可以变成很伟大的，柏克这句“大帝国不能小心眼”，对英国影响至巨。以前我读到柏克那篇演说和那句名言时，其实颇为感动，后来我也喜欢引用这句话来谈中国的未来。	<br><br>
 中国以前积弱，国家处境艰难，因此中国社会很有戒备之心，遇事格外谨慎。强调国民必须爱国。到了现在，由于全民的努力，中国已经崛起，不是世界第一，也是世界第二。当中国强大，不但自己的人民，周边的国家，自然对中国的要求和期待变多。但对这些期待，我们不能误认是找它的麻烦，而应看成是对大国的勉励。柏克当年就说过，大帝国不能小心眼，而必须用大胸襟看自己，提高自己的格局，证明自己也可以变得很伟大。柏克的名言，对中国人应有启发与鼓励！	<br><br>
+
+
+<a href= "link06.html">图书馆的“阅读规则”</a><br><br>
 Samuel Johnson	<br><br>
 Samuel Johnson, an 18th-century English author, wrote dozens of essays that defined his views on the politics of his time.	<br><br>
 Patriotism is the last refuge of a scoundrel: Samuel Johnson	<br><br>
@@ -101,6 +110,7 @@ Edmund Burke	<br><br>
 由于伯克之前对于美国独立的强烈支持和他对王室特权的长期对抗记录，当他在1790年发表《对法国大革命的反思》时震惊了许多人。在整场法国大革命中，伯克成为英国最早而又最突出的法国大革命批判者，他认为大革命已经演变为一场颠覆传统和正当权威的暴力叛乱，而非追求代议、宪法民主的改革运动，他批评大革命是企图切断复杂的人类社会关系的实验，也因此沦为一场大灾难。他还特别谴责民主：“一名理发师或是一名蜡烛制造者的职业不可能成为任何人眼中的荣誉，更不用说其他一堆更为次等的职业。这些人不应该受到国家的迫害，但如果这些人被允许进行统治—无论是个人的还是集体的，国家反而是受到了这些人的迫害。”之前曾欣赏伯克的许多人如托马斯 杰斐逊以及同为辉格党的政治家查理斯 詹姆斯 福克斯都谴责伯克是一名反动份子以及民主的敌人，托马斯 潘恩还在1791年写下《人权》一书以回应伯克。不过，许多同样支持民主的政治家如约翰 亚当斯则认为伯克对法国大革命的评价是正确的。	<br><br>
 由于这些事件造成的争议使得辉格党内部产生冲突，最后使得伯克与福克斯的合作关系及友谊画下休止符。在1791年伯克发表了《呼吁从新辉格回归老辉格》一文，再度展开他对于法国大革命中燃起的激进革命思想的批判，并且批评辉格党内部那些支持这些革命的人。最后大多数的辉格党人选择站在伯克这边，并且表决支持保守派的小威廉 皮特政府，皮特接着在1793年向法国革命政府宣战。	<br><br>
 伯克死后，对他的评价可以从卡尔 马克思和温斯顿 丘吉尔两人的极端对比中看出端倪。	<br><br>
+古之学者为己，今之学者为人。我们用心做，您来细细品。您也可以<a href= "http://www.retter2012.com" title="点击进入"> 先下载一个</a>应用程序（App），有空再慢慢看。<br><br>
 卡尔 马克思是伯克思想的严厉批评者，他在《资本论》一书中写道：	<br><br>
 这个马屁精受了英国君王的贿赂，让他批评法国大革命，就有如他在美国问题的开头时被北美殖民者收买以赞美他们，这个假扮自由主义者对抗英国君王的家伙，只是个彻底下流的资产阶级。	<br><br>
 而温斯顿 丘吉尔则在《政治的一致性》里写道：	<br><br>
@@ -121,6 +131,9 @@ Liberty must be limited in order to be possessed.	<br><br>
 语种： 简体中文	<br><br>
 开本: 32	<br><br>
 这本中文译本一看就是匆促而就的。相比英文原版行文的流畅和典雅，中文译文读起来磕磕绊绊且不易理解，要是没有页脚的注释那就更没法读了。中文译本我读到第40页就再也读不下去了。反倒是英文原版，虽然是英文文本读起来有些吃力（作者写得就比较精炼、不是按大众科普版来写的），但是读下来的感觉比读这本中文译本好多了。	<br><br>
+<a href= "link01.html">中国崛起的四个问题</a><br><br>
+<a href= "link02.html">中国与1914</a><br><br>
+<a href= "link06.html">图书馆的“阅读规则”</a><br><br>
  Disraeli	<br><br>
 第一代比肯斯菲尔德伯爵本杰明 迪斯雷利 （英语：Benjamin Disraeli, 1st Earl of Beaconsfield，1804年12月21日－1881年4月19日），英国保守党政治家、作家和贵族，曾两次担任首相。他在保守党的现代化过程之中扮演了中心角色，因为他确立了它的政策，建立了它和民众之间广阔的接触范围。迪斯雷利为人铭记，不但是因为他的声音在国际事务中极具分量，也是因为他曾经和自由党代表人威廉 尤尔特 格莱斯顿展开政治斗争、提出了一国保守主义或“托利党民主主义”。因为他的政策，世人将保守党和大英帝国的荣誉与力量联系在一起。时至今日，他仍然是唯一一位犹太裔英国首相。	<br><br>
 迪斯雷利生于伦敦。他的父亲和教友发生争执后脱离犹太教。迪斯雷利也在12岁时受洗为圣公宗教徒。1837年，迪斯雷利在遭遇多次失败后，成功入选下议院。1841年，保守党上台执政，但是，新任首相罗伯特 皮尔爵士没有赋予迪斯雷利任何职位。1846年，皮尔提出废除谷物法，取消针对入口谷物的关税，遭到部分保守党党员反对，他因此带领追随者与保守党决裂。迪斯雷利在下议院猛烈批评皮尔。皮尔派脱离保守党后，保守党在议会内只余下几个有资历的党员，因此，迪斯雷利成为了保守党的重要人物，不过，不少人仍然厌恶迪斯雷利。德比勋爵在19世纪50、60年代曾三次组成政府，在他执政期间，迪斯雷利曾经担任财政大臣和下议院领袖。他也在这段时间里，和自由党的威廉 尤尔特 格莱斯顿结为仇敌。	<br><br>
@@ -335,6 +348,7 @@ Kirsch was born in Los Angeles in 1976. He is the son of lawyer, author, and bib
 For a while, Kirsch made his living as a freelance writer, and he has regularly written freelance articles for many different publications including Slate, The New Yorker, The Times Literary Supplement, The New York Times Book Review, and Poetry. Richard John Neuhaus, writing in First Things, called Kirsch “a literary critic of some distinction.”[5] Writing in The Nation, John Palattella describes Kirsch as “the intellectual offspring of the New Formalists.”[4] Currently, Kirsch is a contributing editor to Harvard Magazine and Tablet Magazine and the author of the weekly column "The Reader" on Nextbook. He also currently holds the position of senior editor for The New Republic, the publication where he started his writing career.	<br><br>
 Over the course of his career, he has written reviews and feature articles on a diverse array of poets and novelists, including Charles Bukowski, Emily Dickinson, Kay Ryan, T.S. Eliot, Thomas Hardy, H.G. Wells, Richard Wilbur, Gerard Manley Hopkins, Dylan Thomas, John Keats, Saul Bellow, John Updike, Hart Crane, and David Foster Wallace. He has also written articles on assorted cultural issues, covering topics like rap music, America and the Roman Empire, the relationship between conservative politics in America and the writings of Ayn Rand, and the importance of literary criticism.	<br><br>
 Kirsch has published two books of poems, The Thousand Wells and Invasions, as well as non-fiction books on Benjamin Disraeli and Lionel Trilling. The Thousand Wells won The New Criterion Poetry Prize in 2002. His poems have also appeared in many magazines including The Paris Review, Partisan Review, The Formalist, Harvard Review, and The New Criterion.	<br><br>
+<a href= "link07.html">宏观经济学的科学家与工程师</a><br><br>
 The New Republic is a liberal American magazine of commentary on politics and the arts published continuously since 1914. A weekly for most of its history, it is currently published 20 times per year[2] with a circulation of approximately 50,000.[1]	<br><br>
 In March 2012, Chris Hughes became the publication's owner, editor-in-chief, and publisher.	<br><br>
 《新共和》杂志（The New Republic，简称TNR）	<br><br>
@@ -345,6 +359,8 @@ In March 2012, Chris Hughes became the publication's owner, editor-in-chief, and
 2010年，休斯创办了一家名为Jumo的非营利社交网站并担任执行董事，网站的目标是“帮助那些想方设法帮助世界的人”。[9][10]同年7月，他被联合国艾滋病规划署选入一个由知名政治家、商业领袖、人权活动家和科学家组成的17人的“高级别委员会”，任务是“在来年发起一场社会和政治运动，旨在赢得大家对艾滋病预防计划的支持”。[11]	<br><br>
 休斯也是彼尔德伯格俱乐部的会员，并出席了2011年在瑞士圣莫里茨举行的瑞士2011年彼尔德伯格会议。[12]	<br><br>
 2012年3月，休斯购买了《新共和》杂志的多数股份。他计划成为杂志的发行人和总主编，而理查德 贾斯特（Richard Just）将仍担任主编。 	<br><br>
+Retter2012，我们提供“更快的速度”和“更好的内容”。<br><br>
+<a href="http://www.retter2012.com/">Retter is Better</a>, WE Create and Deliver Real Value!<br><br>
 Bilderberg Club	<br><br>
 彼尔德伯格俱乐部（英语：Bilderberg Club），又称彼尔德伯格集团（Bilderberg Group）、彼尔德伯格会议（Bilderberg conference），是世界级的年度非官方会议，与会者约为130位，参加者多为商业、媒体及政治精英，被称为是“全球影子政府”。此会议每年召开却拒绝任何媒体采访，也不透露任何开会内容，并在开会地点动用大量军警维安人员阻挡外界靠近，各国主流媒体也不报道这场会议，十分神秘。	<br><br>
 “彼尔德伯格俱乐部”由已逊位的荷兰女王贝娅特丽克丝（Beatrix of the Netherlands）的父亲贝恩哈德亲王（Prince Bernhard of Lippe-Biesterfeld）于1954年创立，以弥合欧洲与美国之间日趋扩大的裂痕，由于首次会议在荷兰的一家名为彼尔德伯格的旅馆举行，故往后每年的同类活动被称为“彼尔德伯格俱乐部”或“彼尔德伯格会议”。	<br><br>
