--- a/link04.html
+++ b/link04.html
@@ -48,6 +48,8 @@
 	<font size=5>
 	<br><br>
 
+<a href= "link03.html">大国不能小心眼</a><br><br>
+<a href= "link06.html">图书馆的“阅读规则”</a><br><br>
 
 中共中央关于全面推进依法治国若干重大问题的决定	<br><br>
 （二〇一四年十月二十三日中国共产党第十八届中央委员会第四次全体会议通过）	<br><br>
@@ -70,6 +72,9 @@
 全面推进依法治国是一个系统工程，是国家治理领域一场广泛而深刻的革命，需要付出长期艰苦努力。全党同志必须更加自觉地坚持依法治国、更加扎实地推进依法治国，努力实现国家各项工作法治化，向着建设法治中国不断前进。	<br><br>
 二、完善以宪法为核心的中国特色社会主义法律体系，加强宪法实施	<br><br>
 法律是治国之重器，良法是善治之前提。建设中国特色社会主义法治体系，必须坚持立法先行，发挥立法的引领和推动作用，抓住提高立法质量这个关键。要恪守以民为本、立法为民理念，贯彻社会主义核心价值观，使每一项立法都符合宪法精神、反映人民意志、得到人民拥护。要把公正、公平、公开原则贯穿立法全过程，完善立法体制机制，坚持立改废释并举，增强法律法规的及时性、系统性、针对性、有效性。	<br><br>
+
+古之学者为己，今之学者为人。我们用心做，您来细细品。您也可以<a href= "http://www.retter2012.com" title="点击进入"> 先下载一个</a>应用程序（App），有空再慢慢看。<br><br>
+
 （一）健全宪法实施和监督制度。宪法是党和人民意志的集中体现，是通过科学民主程序形成的根本法。坚持依法治国首先要坚持依宪治国，坚持依法执政首先要坚持依宪执政。全国各族人民、一切国家机关和武装力量、各政党和各社会团体、各企业事业组织，都必须以宪法为根本的活动准则，并且负有维护宪法尊严、保证宪法实施的职责。一切违反宪法的行为都必须予以追究和纠正。	<br><br>
 完善全国人大及其常委会宪法监督制度，健全宪法解释程序机制。加强备案审查制度和能力建设，把所有规范性文件纳入备案审查范围，依法撤销和纠正违宪违法的规范性文件，禁止地方制发带有立法性质的文件。	<br><br>
 将每年十二月四日定为国家宪法日。在全社会普遍开展宪法教育，弘扬宪法精神。建立宪法宣誓制度，凡经人大及其常委会选举或者决定任命的国家工作人员正式就职时公开向宪法宣誓。	<br><br>
@@ -132,6 +137,10 @@
 依法规范司法人员与当事人、律师、特殊关系人、中介组织的接触、交往行为。严禁司法人员私下接触当事人及律师、泄露或者为其打探案情、接受吃请或者收受其财物、为律师介绍代理和辩护业务等违法违纪行为，坚决惩治司法掮客行为，防止利益输送。	<br><br>
 对因违法违纪被开除公职的司法人员、吊销执业证书的律师和公证员，终身禁止从事法律职业，构成犯罪的要依法追究刑事责任。	<br><br>
 坚决破除各种潜规则，绝不允许法外开恩，绝不允许办关系案、人情案、金钱案。坚决反对和克服特权思想、衙门作风、霸道作风，坚决反对和惩治粗暴执法、野蛮执法行为。对司法领域的腐败零容忍，坚决清除害群之马。	<br><br>
+
+<a href= "link05.html">“文革”后的逆袭与重续</a><br><br>
+
+
 五、增强全民法治观念，推进法治社会建设	<br><br>
 法律的权威源自人民的内心拥护和真诚信仰。人民权益要靠法律保障，法律权威要靠人民维护。必须弘扬社会主义法治精神，建设社会主义法治文化，增强全社会厉行法治的积极性和主动性，形成守法光荣、违法可耻的社会氛围，使全体人民都成为社会主义法治的忠实崇尚者、自觉遵守者、坚定捍卫者。	<br><br>
 （一）推动全社会树立法治意识。坚持把全民普法和守法作为依法治国的长期基础性工作，深入开展法治宣传教育，引导全民自觉守法、遇事找法、解决问题靠法。坚持把领导干部带头学法、模范守法作为树立法治意识的关键，完善国家工作人员学法用法制度，把宪法法律列入党委（党组）中心组学习内容，列为党校、行政学院、干部学院、社会主义学院必修课。把法治教育纳入国民教育体系，从青少年抓起，在中小学设立法治知识课程。	<br><br>
