--- a/link05.html
+++ b/link05.html
@@ -47,6 +47,11 @@
 
 	<font size=5>
 	<br><br>
+<a href= "link01.html">中国崛起的四个问题</a><br><br>
+<a href= "link02.html">中国与1914</a><br><br>
+<a href= "link03.html">大国不能小心眼</a><br><br>
+<a href= "link04.html">全面推进依法治国</a><br><br>
+<a href= "link06.html">图书馆的“阅读规则”</a><br><br>
 
 韩少功：“文革”后的逆袭与重续	<br><br>
 2014/10/25	<br><br>
@@ -105,6 +110,8 @@
 这些娃娃怎么都行，眼看就要成为一些后现代的利益玩家，视官权只是可能的资源之一，可能的手段之一，可能的投资目标之一，一如他们视“民主”和“专制”、“市场”和“计划”、“普世价值”和“本土国情”为意识形态的路路通，任何时候都无碍他们左右逢源和借势发力。因此，他们最能理解冷战的虚妄，最能理解科兹教授为之惊讶和困惑的76.7％。他们的公共造型，只取决于政治季风如何转向，取决于命运给他们暂时的利益定位。说到底，公共政治在他们那里已是一个脏兮兮的话题，只剩下透骨的虚无。	<br><br>
 一天，我无意间重看了一场中央芭蕾舞团的《红色娘子军》，一个女奴走上革命道路的故事。这一舞剧面世之初的“文革”政治背景记忆犹新。但我在剧场里惊讶地发现，当女奴们用手臂挡住鞭击从而掩护琼花逃生，当孤苦无助的女奴被女兵们如林的双手热情接纳，当女战士来到战友就义现场却找不到身影于是向八方天地一遍遍悲诉……一幕幕生死相依的情境，义重如山的表达，击中了观众们的震惊，竟一次次引爆掌声，并有一种反常的经久不息。毫无疑问，这一舞剧正在被重新解读。鼓掌者们在久违的温暖前猛醒，在一种卑贱者解放的绚丽天地里晕眩和飘飞。	<br><br>
 
+<a href= "link07.html">宏观经济学的科学家与工程师</a><br><br>
+<a href= "link04.html">全面推进依法治国</a><br><br>
 
 
 
@@ -166,6 +173,8 @@
 别人会以什么方式铭记我，我认为我决定不了。生活中，我只做自己认为有价值的事情。我从来不想搞政治。我想做律师，过上好日子，做一个好的顾问，但由于发生了一系列政治震荡，我无奈之下只有搞政治了。所以我肩负着很大的责任，我要负责让国家正常运转……我能做的只是确保当我离开时，各种制度还是好的、健全的、清廉的、高效的，确保现有的政府知道自己要做什么，知道搜罗高素质的下届政府人选。	<br><br>
 我并不是说我所做的一切都是正确的，但我做的每一件事情都是基于高尚的目的。我必须做一些令人不悦的事情，以及把某些人未经审判就关起来。要盖棺定论，到那时你们再评价我。在闭眼之前，我可能还会做些这样的事情。	<br><br>
 
+<a href= "link04.html">全面推进依法治国</a><br><br>
+<a href= "link01.html">中国崛起的四个问题</a><br><br>
 
 
 
@@ -290,6 +299,10 @@
 2013年5月，中央纪委副书记王伟履新国务院三峡建设委员会办公室副主任、党组成员，成为十八届中央纪委领导层中首位职务变动者。次年初，中央纪委十八届三次全会，选举上海市纪委原书记杨晓渡为中央纪委副书记。	<br><br>
 今年10月，60岁的中央纪委副书记李玉赋出任全国总工会党组书记。按照党章规定，中央纪委全会有权补选中央纪委副书记。刚刚结束的四次全会上，刘金国填补了李玉赋的职位空缺。	<br><br>
 本组文/本报记者 桂田田	<br><br>
+
+
+Retter2012，我们提供“更快的速度”和“更好的内容”。<br><br>
+<a href="http://www.retter2012.com/">Retter is Better</a>, WE Create and Deliver Real Value!<br><br>
 王岐山讲话里的十大反腐信号	<br><br>
 2014-10-26  第一财经日报	<br><br>
 王岐山讲话之初就引用四中全会的《决定》的部分内容，称其“开宗明义，把 坚持中国共产党的领导 列为首要原则，把 加强和改进党对全面推进依法治国的领导 作为重要任务部署，前呼后应、特色鲜明，体现了坚持党的领导和发挥党的政治保证作用的高度统一。” 中 	<br><br>
