--- a/link07.html
+++ b/link07.html
@@ -47,14 +47,62 @@
 
 	<font size=5>
 	<br><br>
+<a href= "link01.html">中国崛起的四个问题</a><br><br>
+<a href= "link02.html">中国与1914</a><br><br>
+<a href= "link04.html">全面推进依法治国</a><br><br>
+
+
+美联储政策声明：终结第三轮QE<br><br>
+
+新浪财经　2014-10-30 <br><br>
+
+ 北京时间10月30日凌晨消息，在为期两天的政策制定会议闭幕以后，美国联邦公开市场委员会(FOMC)周三公布了货币政策声明，宣布终结其第三轮量化宽松计划。<br><br>
+
+FOMC宣布，自引入现有资产购买计划以来，就业市场前景已经取得了重大改善。此外，FOMC继续观察到，更广泛经济中拥有充足的潜在力量，可在物价稳定的环境下为正在朝着最大就业方向所取得的进展提供支持。据此，FOMC决定在本月终止其资产购买计划。
+<br><br>
+在此次会议上，FOMC还决定将基准利率维持不变，符合市场广泛预期；同时指出在资产购买计划终结以后的很长时间里，继续将联邦基金利率维持在当前区间很可能仍将合适；尤其是，如果预期通胀率继续低于FOMC的2%长期目标，并假设长期通胀预期仍很稳定的情况下就更是如此。<br><br>
+
+但声明同时表示，如果未来获得的信息表明，朝着FOMC就业和通胀目标所取得的进展快于FOMC目前预期，则上调联邦基金利率目标区间的发生时间很可能将早于当前预期。相反的，如果这种进展慢于预期，则上调目标区间的发生时间很可能将晚于当前预期。
+<br><br>
+声明全文如下：<br><br>
+
+自FOMC 9月份政策制定会议以来所收到的信息表明，经济活动正在适度扩张。就业市场状况在某种程度上进一步改善，就业岗位稳固增长，失业率下降。整体而言，一系列就业市场指标表明就业市场上劳工资源利用率不足的现象正在逐步减少。家庭支出正在适度增长，企业固定投资也正在上升，而住房部门的复苏进程则仍旧缓慢。通胀继续低于FOMC的长期目标。以市场为基础的通胀补偿指标在某种程度上有所下降；以调查报告为基础的长期通常预期则仍旧保持稳定。
+<br><br>
+FOMC正依据其法定使命来寻求培育最大程度上的就业和物价稳定性。FOMC预计，通过合适的政策融通性措施，经济活动将以适度的步伐扩张，就业市场指标和通胀率将朝着FOMC判定为符合其双重使命的方向发展。FOMC认为，经济活动和就业市场前景所面临的风险已几乎达到平衡。虽然近期内通胀很可能仍将由于能源价格下跌及其他因素而受到压制，但FOMC判断自今年年初以来，通胀率持续低于2%的可能性已在某种程度上有所下降。
+<br><br>
+FOMC目前判断，自引入现有资产购买计划以来，就业市场前景已经取得了重大改善。此外，FOMC继续观察到，更广泛经济中拥有充足的潜在力量，可在物价稳定的环境下为正在朝着最大就业方向所取得的进展提供支持。据此，FOMC决定在本月终止其资产购买计划。
+<br><br>
+FOMC将维持现有的政策，将来自于所持机构债和机构抵押贷款支持债券的本金付款再投资到机构抵押贷款支持债券中去，以及在国债发售交易中对即将到期的美国国债进行展期。这项政策令FOMC的长期债券持有量保持在可观水平，应可帮助保持融通性的金融状况。
+<br><br>
+为了支持朝着最大就业和物价稳定性的方向的继续进展，FOMC今天重申此前的观点，即目前联邦基金利率的0到0.25%目标区间仍是合适的。为了判定需在多长时间里保持这一目标区间，FOMC将对有关其最大就业和2%通胀目标的进展——包括已实现进展和预计将有的进展——进行评估。这种评估将把一系列广泛的信息考虑在内，包括有关就业市场状况的指标、通胀压力和通胀预期指标、以及有关金融发展的读数等。
+<br><br>
+基于对这些因素的评估，FOMC预计在本月终结资产购买计划以后的相当长时间里，继续将联邦基金利率维持在0到0.25%目标区间很可能仍将合适；尤其是，如果预期通胀率继续低于FOMC的2%长期目标，并假设长期通胀预期仍很稳定的情况下就更是如此。但是，如果未来获得的信息表明，朝着FOMC就业和通胀目标所取得的进展快于FOMC目前预期，则上调联邦基金利率目标区间的发生时间很可能将早于当前预期。相反的，如果这种进展慢于预期，则上调目标区间的发生时间很可能将晚于当前预期。
+<br><br>
+当FOMC决定开始取消政策融通性措施时，将会采取平衡的举措，这种举措将符合其最大就业和保持2%通胀率的长期目标。FOMC目前预计，即使是在就业和通胀率均达到接近符合其双重使命的水平以后，经济状况可能仍将在一段时间里令FOMC有理由把目标联邦基金利率维持在较低水平，这一水平低于FOMC视为正常的长期水平。
+<br><br>
+在此次政策制定会议上投票支持FOMC货币政策行动的委员有：主席珍妮特-耶伦(Janet L. Yellen)、副主席威廉-杜德利(William C. Dudley)、莱尔-布莱恩纳德(Lael Brainard)、斯坦利-费希尔(Stanley Fischer)、理查德-费舍尔(Richard W. Fisher)、洛丽塔-梅斯特(Loretta Mester)、查尔斯-普罗索(Charles I. Plosser)、杰罗姆-鲍威尔(Jerome H. Powell)和丹尼尔-塔鲁洛(Daniel K. Tarullo)。
+<br><br>
+纳拉亚拉-柯薛拉柯塔(Narayana Kocherlakota)则投了反对票。他认为，鉴于仍旧迟滞的通胀前景和最近以来以市场为基础的长期通胀预期指标下降的形势，FOMC应承诺至少在未来一到两年时间里继续保持当前的联邦基金利率目标区间，直到通胀前景重返2%时为止；并应继续以当前水平实施资产购买计划。(金良/编译)
+<br><br>
+
+<a href= "link03.html">大国不能小心眼</a><br><br>
+
+
+
 
 美联储周三（2014年10月29日）宣布结束QE。美联储称，美国经济不再需要此类帮助。这是它自2008年推出QE后，第三次如此表态，但这一次的决定更加坚定，标志着美国经济从大萧条中缓慢且痛苦地复苏了。	<br><br>
 与此同时，美联储承诺，购债计划结束后，短期利率“在相当长一段时间”仍将维持在较低水平，并且将替换到期债券，从而使美联储的持有量维持在4.5万亿美元。	<br><br>
 美联储认为就业市场状况有改善。美联储在为期两天的议息会议结束后发表声明称，劳动力市场状况“进一步小幅改善，就业稳固增长，失业率下降；劳动力市场产能不足的状况正在逐步减弱。”	<br><br>
 9月，美国失业率降到5.9%，超出市场预期。同时，截至今年9月，美国月均新增就业岗位22.7万个。	<br><br>
+
+<a href= "link06.html">图书馆的“阅读规则”</a><br><br>
+
 Fed Ends Stimulus Program With Economy Still On Shaky Ground	<br><br>
  The Huffington Post     	<br><br>
  10/29/2014  By  Mark Gongloff	<br><br>
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+
 《比较》：宏观经济学家的双重角色：科学家与工程师	<br><br>
 2014年10月29日   财新网 	<br><br>
  经济学家们喜欢摆出一副科学研究者的模样，对此我心知肚明，因为我自己也经常这样干。在给本科生上课的时候，我很刻意地把经济学描述成一门科学，以免学生们在开课的时候就把它当成不切实际的文科。在大学里，物理系的老师们可能会觉得很有趣，因为我们喜欢拿自己的学科和他们攀亲，我们会及时提醒大家，经济学家们在用精确的数学来构造理论，收集庞大的个体和总体行为的数据，并采用最高深的统计技巧，来获取不受偏见和意识形态干扰的实证结论，至少我们自己是这样期盼的。	<br><br>
@@ -131,6 +179,9 @@ Fed Ends Stimulus Program With Economy Still On Shaky Ground	<br><br>
  我并不是说，在研究飞速发展的同时，教学内容却在原地踏步。同30年前相比，今天的教科书把更多的重点放在了古典货币理论、长期增长模型以及预期的作用等方面。教材对于政策的效果不像以前那么自信了，而且尽管缺乏实际证据，还是更强调政策规则的重要性，而不是相机选择的货币和财政措施。然而，如今的学生们理解商业周期的基本框架依然与早期凯恩斯主义者的模型相似。	<br><br>
  主要的例外是罗伯特 巴罗撰写的中级教材，初版于1984年。巴罗的书给本科生提供了一个清晰、容易理解的介绍，如何用新古典的方法来研究宏观经济。书中也涵盖了凯恩斯主义的模型，但放在后面，比较简短，不特别强调。那本书问世的时候，受到了广泛的关注和好评。然而，尽管有许多宏观经济学家阅读，并受到触动，却很少有人把它推荐给自己的学生。巴罗希望在课堂里掀起的新古典革命始终未能发生，他的教材也没有在市场上对主流教材构成竞争威胁。	<br><br>
  宏观经济学课堂上的沉寂与半个世纪之前的情况形成了鲜明对比。萨缪尔森的教材是在1948年初版的，其目标是向大学生们宣扬凯恩斯主义革命，世界各国的教师们很快就热情拥抱了它。相反，新古典派和新凯恩斯主义的思想都没有从根本上改变大学宏观经济学教育的内容。	<br><br>
+ 
+ <a href= "link06.html">图书馆的“阅读规则”</a><br><br>
+
  短期内还没有希望	<br><br>
  凯恩斯有句名言：“假如经济学家们能设法让别人把自己当成很普通但有专长的人，就像大家对待牙医那样，那就再好不过了。”（John Maynard Keynes，1931）他所表达的愿望是，宏观经济研究这门科学将发展成一项有用而平凡的工程应用技术，在未来的理想国里，避免经济衰退会像修补蛀牙一样直截了当。	<br><br>
  然而，过去几十年来宏观经济学理论研究的进展与牙科医学相去甚远。新古典主义和新凯恩斯主义都没有对承担艰巨的货币和财政政策制定任务的经济学家产生显著影响。学术进展也没有对大学教师们向未来的选民们讲述的课程带来大的帮助。从宏观经济工程的角度来看，过去几十年的研究似乎不幸走入了歧途。	<br><br>
@@ -146,9 +197,13 @@ Fed Ends Stimulus Program With Economy Still On Shaky Ground	<br><br>
 受益最大的不是美联储在购买的资产，而是股票。在永久量化宽松时期，标准普尔500指数(S&P 500)累计上涨42.75%。	<br><br>
 尽管量化宽松政策对市场的影响令人费解，但它对经济产生了预期的影响。2012年9月，失业率的逐步改善停滞在8.1%，自那以来已降至5.9%。在宣布推出永久量化宽松时，美联储表示“如果劳动力市场前景没有显著改善”，将一直执行该政策。无论量化宽松政策是否足够，它已达到目标。	<br><br>
 如今，随着永久量化宽松的结束，大家都必须应对其他后果：股价上涨，同时债券市场显示经济乏力，而美元坚挺已开始拖累美国经济。	<br><br>
-2014年10月30日	<br><br>
+
+Retter2012，我们提供“更快的速度”和“更好的内容”。<br><br>
+<a href="http://www.retter2012.com/">Retter is Better</a>, WE Create and Deliver Real Value!<br><br>
+
 QE结束，谁将裸泳？  	<br><br>
 英国《金融时报》新兴市场编辑 金奇 伦敦报道	<br><br>
+2014年10月30日	<br><br>
 六年来，新兴市场一直处在美联储(Federal Reserve)宽松货币政策所营造的世界里。一股又一股流动性洪流从发达经济体涌向发展中经济体，为基础设施和企业投资提供资金，还让消费者陶醉于信贷助燃的消费梦想。	<br><br>
 因此，美联储昨日宣布量化宽松(QE)政策结束，既是一个分水岭，也代表着纵身跳入一个未知世界。	<br><br>
 美联储终止资产购买计划之际，适逢新兴市场进入一个充满挑战的时期，受到各种相互关联的不利趋势的困扰。中国经济正在放缓，受德国需求不足拖累的欧元区也是如此。	<br><br>
@@ -166,8 +221,12 @@ QE结束，谁将裸泳？  	<br><br>
 施罗德(Schroders)经济学家克雷格 博瑟姆(Craig Botham)表示，近年充斥由QE带来的资金，并且为资助政府赤字、基础设施项目和企业扩张计划出了大力的债务市场尤其脆弱。	<br><br>
 根据国际清算银行(Bank for International Settlements)的数据，外资所持的新兴市场本地债券比例已从2007年的8%升至2012年的17%。同期，新兴市场国内证券市场的总规模增加三分之一，至16万亿美元以上。	<br><br>
 不过，即便有种种负面信号，令人抱有希望的迹象也是有的。不断下跌的大宗商品价格导致许多新兴国家通胀压力消退，使央行拥有保持宽松货币政策的回旋余地。同时，尽管美联储已经终止资产购买计划，但日本央行(Bank of Japan)仍忙于购买政府债券。如果欧元区经济增长继续令人失望，欧洲央行(ECB)也可能效仿。流动性充裕的时代远远没有结束。	<br><br>
-2014年10月30日	<br><br>
+
+<a href= "link06.html">图书馆的“阅读规则”</a><br><br>
+
+
 美联储结束QE后注意力转向加息  	<br><br>
+2014年10月30日	<br><br>
 英国《金融时报》 罗宾 哈丁 华盛顿报道 	<br><br>
 美联储(Fed)在结束空前的资产购买时期后，正将注意力转向首次加息。	<br><br>
 负责制定利率的联邦公开市场委员会(Federal Open Market Committee)的声明措辞发生明显变化，强调美国劳动力市场出现好转。该委员会放弃了之前的观点，即劳动力资源“利用率显著不足”，而是表示这种情况正“逐渐减少”。	<br><br>
@@ -179,6 +238,8 @@ QE结束，谁将裸泳？  	<br><br>
 2012年9月，美联储开始推出第三轮量化宽松政策，当时美联储承诺将每月购买850亿美元的长期资产，直到就业市场出现重大改善。	<br><br>
 去年12月，美联储开始缩减这一购买计划，在此次利率会议之前资产购买规模降至每月150亿美元。	<br><br>
 译者/梁艳裳	<br><br>
+Retter2012，我们提供“更快的速度”和“更好的内容”。<br><br>
+<a href="http://www.retter2012.com/">Retter is Better</a>, WE Create and Deliver Real Value!<br><br>
 Fed Ends Stimulus Program With Economy Still On Shaky Ground	<br><br>
  The Huffington Post     	<br><br>
  10/29/2014  By  Mark Gongloff	<br><br>
@@ -197,9 +258,38 @@ Fed officials have long maintained -- or hoped, anyway -- that the central bank'
 Interest rates rise as bond prices fall, and as long as the Fed is sitting on a mountain of relatively low-risk bonds, then bond prices should stay high, and investors will still be forced to go buy riskier stuff like corporate bonds and stocks.	<br><br>
 The stock market, in fact, has been one of the most obvious winners of the Fed's bond-buying program. Stock prices fell on Wednesday after the Fed's announcement, but not by much. The Dow Jones Industrial Average was down about 50 points, or about 0.3 percent, about 20 minutes after the Fed's announcement. The S&P 500 was down about half a percentage point.	<br><br>
 Some Fed officials have fretted publicly about the unwanted side effects of their easy-money programs, including pumping up market bubbles and filling the coffers of the 1 percent while not doing much for the other 99 percent. Some Fed officials and economists have also been skeptical that QE was worth such risks. Many on the Fed now seem more inclined to try to use other tools to help the economy. 	<br><br>
+<a href= "link06.html">图书馆的“阅读规则”</a><br><br>
+
+杨国英：美联储退出QE对中国利大于弊<br><br>
+新京报　2014-10-29 <br><br>
+美国QE3的彻底退出，这或许会在一定程度上导致新兴经济体的衰退，但不会触及新兴经济体的命脉。<br><br>
+日前，据摩根大通最新预测，在10月28-29日的美联储议息会议上，QE3（第三轮量化宽松）或许彻底终结。<br><br>
+
+QE3的彻底终结（尽管低利率仍将维持一段时间），基本表明美国持续5年的量化宽松货币政策正式进入转轨阶段，未来美联储的货币政策将进入正常化。<br><br>
+
+毫无疑问，对于全球唯一强势货币的美元，美联储任何货币政策的转向，均会波及全球金融市场，这对于货币话语权较弱的新兴经济体尤甚。或许，正因为此，在摩根大通这一预测发布之后，对美股市场并未构成压力，却引来部分新兴经济体人士的担忧。<br><br>
+
+担忧的核心理由无非有三：其一，QE3的彻底终结，将进一步加剧国际资本从新兴经济体的撤离，因为，美国货币政策回归正常化，预示着美元将进入阶段性的升值区间，国际资本回撤美国或可赚取美元的升值收益，而这对于新兴经济体而言，或将意味着廉价资本时代的谢幕，这会对高负债、以及对外资高依存度的新兴经济体造成冲击。<br><br>
+
+其二，美国量化宽松政策的退出，或将引发全球金融市场的新一轮震荡，新兴市场经济有可能发生新的金融危机，特别是资产泡沫比较严重、外汇储备规模较小以及资本流动管制力度较弱的新兴经济体。<br><br>
+
+其三，由于在流动性充足期间，部分新兴经济体的改革不够充分，美国退出量化宽松导致大量的热钱外流时，新兴市场将会措手不及。同时，新兴市场国家货币的相对贬值，使得他们出现财政赤字进一步恶化的局面，或者增加那些以美元为货币单位债务的成本。
+<br><br>
+但是，QE3的彻底终结，美国货币政策回归正常化，对于全球最大的新兴经济体中国而言，却没有必要过度担忧，某种程度上，由其所产生的综合效应甚至是利大于弊。<br><br>
+
+这是因为，我国无论与印度、俄罗斯等金砖国家相比、还是与其他新兴经济体相比，一者拥有近4万亿美元的外汇储备，且资本项下尚未完全放开，故而即使热钱大规模流出，也不会对我国金融市场造成过大的冲击；二者对于有10多亿人口且经济规模已位居全球第二的我国，经济具有相当强的自循环功能，这是过度依赖能源和资源出口的俄罗斯等新兴经济体不可比拟的。故而即使QE3彻底终结引发美元的阶段性上涨，人民币汇率的形成机制也不会由此过于被动。
+<br><br>
+如果更为全面地看，美国货币政策回归正常化，对我国经济而言反而是利好。一方面，美元停止贬值，势必将大大减轻输入型的通胀压力。美元进一步进入升值区间，包括石油、铁矿石、农产品等国际大宗商品价格将会进一步下跌，对于资源进口依赖度较高的我国而言，大宗商品价格的下降，可以降低我国制造业的生产成本。
+<br><br>
+另一方面，如果美元进一步进入升值区间，人民币相对贬值的话，反而会使我国出口商品在全球市场上更具竞争力，对振兴我国的外贸出口将会有一定的刺激作用，这也可以为我国经济结构的调整拓宽空间。
+<br><br>
+最后，对于美国QE3的彻底退出，这或许会在一定程度上导致新兴经济体的衰退，但不会触及新兴经济体的命脉。我们更相信，中国作为全球最大的新兴经济体，能够通过进一步深化改革夯实我国的经济基础，并协同其他新兴经济体国家，共同迈进新一轮可持续增长之境。
+<br><br>
+古之学者为己，今之学者为人。我们用心做，您来细细品。您也可以<a href= "http://www.retter2012.com" title="点击进入"> 先下载一个</a>应用程序（App），有空再慢慢看。<br><br>
+
 Federal Reserve calls end to QE3	<br><br>
-Daniel Palmer  | 	<br><br>
-29/10/2014 Economy | 	<br><br>
+Daniel Palmer    	<br><br>
+29/10/2014 Economy   	<br><br>
 The US Federal Reserve has announced the formal conclusion of its latest bond-buying program, commonly referred to as QE3, while reaffirming plans to hold interest rates at current levels for a "considerable time".	<br><br>
 The US central bank said it would make a final $US15 billion taper to its quantitative easing program from next month, concluding a 10-month process that has seen it gradually reduce its bond buying from $US85 billion.	<br><br>
 The widely expected move came at the end of a two-day meeting of the Fed’s policy-setting Federal Open Market Committee (FOMC), with market eyes now shifting to the central bank’s view on the US economy and outlook for rate hikes.	<br><br>
@@ -232,6 +322,8 @@ Even in the west, that pessimism is present: Pedro Nicolaci da Costa wrote for T
 Although Bernanke has attributed QE with cutting unemployment, da Costa wrote, Fed researchers and academic economists have for years studied the practice and are split with regards to how successful the rounds have been, and what the eventual outcome will be when all is said and done. 	<br><br>
 I do think they're overly optimistic, Barbara J. Cummings of the Boston Private Bank & Trust Company told CNBC this week. "The market and the Fed are definitely saying two different things. And the market is right. It usually is." 	<br><br>
 To some, the outcome is even drearier. “Without another dose of stimulus, the US will likely slide into recession,” Worth Wray, chief strategist at Mauldin Economics, predicted to Equities earlier this month. 	<br><br>
+Retter2012，我们提供“更快的速度”和“更好的内容”。<br><br>
+<a href="http://www.retter2012.com/">Retter is Better</a>, WE Create and Deliver Real Value!<br><br>
 美联储如约退出QE 资产负债表大规模扩容近4万亿美元	<br><br>
 2014/10/30	<br><br>
 29日，美国联邦储备委员会发布声明称，在10月份完成最后一轮150亿美元购债活动后，将不再进行此类活动，这意味着自2008年金融危机以来，历时6年，先后三轮的量化宽松货币政策（QE）正式宣告结束。	<br><br>
@@ -268,6 +360,110 @@ QE还有什么作用？	<br><br>
 事实上QE的整个过程中并没有任何印刷钱币的行为。货币是在纸面上被创造出来的，金融机构们看到的是储备账户里资金数字的增加。只有当银行将这些钱借出的时候，才会增加实体经济中的资金。不过在经济形势并不算太好的情况下，借贷意愿不强导致大量美联储“印出”的钱还躺在超额准备金账户上，而消费、投资意愿都不强导致货币流速也不快。所以事实上美国的QE并没有产生想象中那么大的作用。	<br><br>
 QE总是有效吗？	<br><br>
 QE的效果很难衡量，当然有人认为美国失业率从QE开始时的超过8%降至目前的5.9%是效果显著的证据，但也有人认为失业下降是人口结构性变化的结果。	<br><br>
+
+<a href= "link04.html">全面推进依法治国</a><br><br>
+
+美联储退出QE3有什么可怕的<br><br>
+
+ 叶檀<br><br>
+
+2014/10/29 每日经济新闻<br><br>
+
+ 
+
+不要太担心美联储退出QE，应该担心的是全球低迷的实体经济。
+<br><br>
+ 
+
+根据美联储（Fed）6月份货币政策会议纪要显示，如果美国经济保持在正确的轨道上运行，它将于今年10月终止其规模庞大的资产购买计划。目前看美国的经济数据非常“正确”，退出的可能性很大。
+
+   <br><br>
+
+美联储退出QE，说明美国经济在全球最扛摔打，由于升息预期，全球投资心理会受到巨大冲击，但对全球市场实际影响不会太大。
+
+ <br><br>
+
+美联储继续保留QE只是安抚市场的象征性动作，用羽毛搔市场的痒。两年多以前启动QE时，美联储每月购买850亿美元资产，目前每月购买规模仅150亿美元，相对于数万亿美元的市场规模和成交量，只是九牛一毛。关键是美国财政部是否会同步退出，看来可能性不大。
+
+ <br><br>
+
+用QE办法量化宽松、压低债券收益率主要是为了增加流动性，压低借贷利率，全球央行成功地做到了这一点。近一个月收益率虽然略有上升，但依然处于低位。北京时间10月27日，美国十年期国债收益率2.2783，一年期国债收益率0.1006。既然金融市场已经恢复了流动性，已经成功地将存款利率降到0，不必美联储强行撬动市场。
+
+ <br><br>
+
+事实上，全球量化宽松使得国债收益率大跌，形成巨大的债券市场牛市泡沫，目前没有一家央行吃了豹子胆敢主动挑破这一泡沫。主要国家10年期国债收益率如下，日本0.462%；德国0.890%；美国2.285%；英国2.229%；澳大利亚3.291%。就算美联储退出QE，其他国家将继续维持量化宽松政策，债券牛市不会轻易消退，考虑到欧亚等主要经济体市场低迷，美联储在行动之举不取得兄弟们的支持，是不可思议的。
+<br><br>
+ 
+
+美联储已经进行了一次实战演习，美国不会也不敢大刀阔斧地提升利率。10月15日，由于公布的经济数据不佳和埃博拉病毒造成避险情绪，加上如影随形的美联储加息预期，投资机构纷纷进入债市避险，导致债券市场价格大幅上升30BP以上，由于空头头寸被挤爆，为了弥补空头头寸的资金，投资者不得不出售流动性强的股票市场的股票，导致股票市场在15、16号两天在谷底上下乱窜，标普500指数在10月15日在谷底走出一个如针尖般的收阳十字星，16日又走出收阴的十字星。
+
+ <br><br>
+
+市场惊魂会让任何一家央行胆战，美银美林研报指出：如果美国股市进一步下跌10%，美联储恐怕真的就得实施第四轮QE政策（进而与美国股市在2010年下跌11%和2011年下跌16%相一致）。
+<br><br>
+ 
+
+美国房贷利率可能上升，以防止新一轮房地产泡沫，但美联储的低息计划不会改变。2012年9月13日，美联储麾下联邦公开市场委员会（FOMC）宣布，0-0.25%的超低利率的维持期限将延长到2015年中。现在市场已经认可了贷款支持证券（MBS）和各类债券，美联储可以通过回购金融机构的抵押品等方式创造流动性，而越来越火爆的市场通过质押回购资产也能创造出流动性，美联储退出QE，不会影响市场流动性，低息政策仍可持续。
+<br><br>
+ 
+
+但是，从长期来看，一个新的时代开始了，全球经济版图必将重构。
+
+ <br><br>
+
+美国率先摆脱次贷危机的阴影，美元进入牛市，黄金、石油等大宗商品价格大幅下挫，欧元区处于艰难的重整期，各国之间的财政协同、监督等方面如一块块互相撞击的冰山，欧元区成立后第一期红利消失，目前还处于亏损期。只要各国之间的制度互相撞击，欧元区长期前景就不被看好。
+
+ <br><br>
+
+对于制造业国家来说同样如此，全球制造业如何重构，低端制造业转移到印度、斯里兰卡，高端制造业转移到美国本土，中国怎么办？与其担心美国退出QE让资金回流美国，还不如担心中国制造业转型不力造成的影响。
+<br><br>
+ 
+ 正是从这个角度说，中国经济的未来与美国退不退出QE关系不大，而与中国国内的法治市场改革关系更大。
+<br><br>
+
+<a href= "link01.html">中国崛起的四个问题</a><br><br>
+<a href= "link02.html">中国与1914</a><br><br>
+<a href= "link03.html">大国不能小心眼</a><br><br>
+<a href= "link04.html">全面推进依法治国</a><br><br>
+<a href= "link05.html">“文革”后的逆袭与重续</a><br><br>
+
+
+
+
+美联储以鹰派姿态结束QE3 美元大涨市场哗然
+<br><br>
+汇通网　2014-10-30 	<br><br>
+如市场预期，美联储在10月末的货币政策会议上，宣布停止了其长期实施的第三轮债券购买计划(QE3)。不过与市场此前预期又不同的是，美联储并没有以更为鸽派的措辞安抚市场，相反在退出QE的同时，采取了更为强硬的姿态。	<br><br>
+美联储隔夜的决议声明究竟有多鹰，相信看看最后的投票结果，便能想象一二。此次，此前9月决议投下反对票的美联储鹰派官员费舍尔和普罗索，对决议结果投下了赞成票，而立场最为鸽派的柯薛拉柯塔则投下反对票。与上月相比，此次决议在结束QE和维持“相当长一段时间”的前瞻指引方面均并没有意外，不过，美联储此次却对美国就业市场和通胀呈现乐观的表述，在劳动力市场存在利用不足的表述中去掉了“严重”的措辞。	<br><br>
+由于决议措辞与市场预期出现出入，周三(10月29日)金融市场还是难逃一场大波动，美元指数受鹰派措辞提振周三强势上涨，升破86关口，非美货币和金银则纷纷承压。此外，美债上涨，标普500指数先跌后稍反弹。	<br><br>
+美联储宣布结束第三轮QE，就业描述意外偏向鹰派	<br><br>
+美国联邦储备委员会(Fed)周三宣布，将在10月末停止其长期实施的债券购买计划。这意味着，美联储将终止一项历史性的试验，该试验已在市场上引发了有关其效果的激烈争论，尽管美联储称其已达到了减少失业的主要目标。	<br><br>
+此外，美联储更新了其对于美国就业市场状况的评估，同时指出了通胀面临的一些短线下行风险。美联储保留了有关短期利率将在较长时间内维持在接近零水平的保证。	<br><br>
+总体而言，上述举措显示了美联储对美国经济的信心。美国经济第三季度的增速似乎达到了3%左右。这远好于日本和欧洲的经济增速，同时，在中国经济增长似乎正在减速之际，这对全球经济而言也是一个积极信号。	<br><br>
+美联储指出，美国就业人数出现强劲增长，同时失业率出现下降，并称，一系列劳动力市场指标显示，美国劳动力市场的过剩状况正逐渐消退。这一表态删除了上一次声明中有关劳动力市场过剩状况较为“严重”的评估。投资者一直密切关注该措辞的变化情况，以便寻找美联储对美国经济信心增强的信号。	<br><br>
+美联储在声明中称，FOMC认为，自当前资产购买计划实施以来，美国劳动力市场前景出现了显著改善。此外，FOMC依然认为，美国整体经济已足够强劲，足以支持在价格稳定的环境下，劳动力市场向充分就业状态的持续发展。	<br><br>
+如果所有这些情况的发展都符合美联储官员的计划，则未来数月中，官员们将把注意力集中到有关何时开始提高短期利率及如何在加息前向公众发出暗示的讨论上来。许多市场人士预计，美国将在2015年年中开始加息。美联储官员们保留了利率将在较长时间内维持在接近零水平的保证。这一措辞强烈暗示，官员们对于加息时机的想法没有发生大的变化。	<br><br>
+美联储也在其声明中指出了通胀面临的新风险，称通货膨胀保值债券(TIPS)市场的通胀预期出现了下降。官员们还指出，能源价格出现下滑，但表示他们并不预计这对通胀的下行压力将持续。	<br><br>
+美联储于2012年9月份启动了最新一轮债券购买计划，美联储当时称，将每月购买400亿美元房贷支持债券，并将该举措实施到其看到就业市场出现显著改善为止。美联储在2012年12月份将购买规模扩大至每月850亿美国国债，并从2013年1月份开始逐渐减少购买量。	<br><br>
+明尼阿波利斯联储主席柯薛拉柯塔在利率政策的表决中投了反对票。他希望美联储继续实施债券购买计划，并以更加坚定的口吻承诺将利率维持在低位。	<br><br>
+市场鸽派预期落空，投行纷纷发表点评	<br><br>
+可以说，隔夜美联储的偏鹰表述令市场此前的鸽派预期落空。而华尔街各大投行也纷纷在决议后第一时间对此发表了点评；	<br><br>
+业内投行高盛(Goldman Sachs)认为，美联储决议确实倾向于“鹰派”立场。我们确实注意到，通胀预期有所下降。前瞻指引方面，仍重申将在本月终结资产购买计划以后的相当长时间里不会加息。鉴于美联储两位鹰派代表普罗索和费舍尔均投票支持政策决定，表明美联储的政策倾向已经再度偏向紧缩。	<br><br>
+加拿大皇家银行则指出，鉴于美联储在7月份政策声明中刚刚加入了劳动力资源存在严重利用不足的措辞，而当前的声明中却又指出，这种劳动力利用不足的现象正在减少，尤其是在美联储主席自己也说过就业市场中存在非活跃因素以后，这代表着一种极其“鹰派”的转变。因此，美联储并没有给日后重启量化宽松留下一扇敞开的大门。事实上，可以说他们基本上是重重地关上了这扇门。	<br><br>
+花旗集团认为，美联储10月决议声明更加乐观，更加鹰派，实际上并未谈及美国所面临的整体风险，实际上意味着FOMC加息预期较先前沟通并未被推迟。	<br><br>
+此外，素有“美联储通讯社”之称的华尔街日报记者希尔森拉特指出，美联储本次如期退出QE，表明其对美国经济与就业复苏前景充满信心。但美联储本次重申将会在相当长一段时间保持利率在当前低位，也强烈表现出委员会的加息预期并没有太大改变。按照计划，美联储将在未来数月将讨论重点转移到加息时间、以及如何提前向市场发出加息信号的问题上。	<br><br>
+受美联储10月决议影响，目前市场人士对美联储加息节点的预期已大为提前。美国短期利率交易商现在预计2015年9月升息的机率为50%。在10月上旬，该预测还一度认为美联储可能要到2016年初才会加息。	<br><br>
+金融市场再现大波动，今晚继续聚焦美国GDP数据	<br><br>
+在隔夜美联储公布利率决议后，金融市场也不出意外地出现了大波动。美元指数急剧飙升，黄金(1212.90, -12.00, -0.98%)跌逾1%。美债上涨，标普500指数先跌后稍反弹。	<br><br>
+在美联储政策声明公布后，美元指数急升至三周高位，最新报86.11。投资者将欧元拉低至一周低位，欧元兑美元周三下跌0.75%，跌至1.2632美元。美元兑日元则触及109.03的三周高位。	<br><br>
+美联储的通胀立场更趋强硬，进一步凸显全球主要央行[微博]货币政策背离，在美国为升息作准备的同时，其他主要央行，特别是欧洲央行，正寻求降息或放宽政策，以刺激低迷的经济增长。	<br><br>
+花旗集团美国G10外汇策略部主管Richard Cochinos说，“目前美元走强是相对于市场之前所处的水平。因美联储的声明基调更加乐观，立场更加强硬，没有谈到美国经济总体面临的风险加大。声明似乎暗示联储之前有关政策调整时间的预期不会出现重大延迟。”	<br><br>
+他还指出，“市场此前预期联储将在明年10月首次升息。今日联邦公开市场委员会(FOMC)的声明措辞和美联储官员的讲话暗示将在明年6月升息。因此，升息预期的天平从10月向6月倾斜，这最终对美元有利。”	<br><br>
+值得一提的是，北京时间周四20:30，美元商务部还将发布美国第三季度实际国内生产总值(GDP)初值，在美联储决议结束不久，投资者可能仍需马不停蹄地迎接新的挑战。	<br><br>
+接受媒体调查的经济学家的预期中值显示，第三季度实际GDP初值年化季率料增长3.0%，增速低于上一季度的4.6%，但仍能够反映出美国经济复苏的良好势头。	<br><br>
+法国农业信贷(Credit Agricole)预计，美国第三季度实际GDP初值年化季率或增长3.2%，这部分是受到美国个人消费和民间投资支出增速放缓的影响。	<br><br>
+除了GDP数据外，北京时间周四20:30还将有备受关注的初请失业金数据。媒体调查显示，美国10月25日当周季调后初请失业金人数料持平于上周的28.3万人。若上述美国数据能整体向好，有望进一步助推美元强势，反之，则可能令美元放缓上行步伐。	<br><br>
+
 
 
 	<br><a href="#top">返回页首</a><br>
