--- a/story00.html
+++ b/story00.html
@@ -80,6 +80,10 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	Every Man His Own Priest<br><br>
 	Priesthood of all believers<br><br>
 	
+	西方多元领导，制约平衡。中国一元统治，调和中庸。<br><br>
+	英美善爬（Sharma），中国善跑；国际竞争，扬长避短。<br><br>
+	只要是美国的就是好东东？不！比如美国的麦当劳和肯德基。<br><br>
+
 	NOTE: The views expressed in the articles are the author's own and do not necessarily reflect Retter2012’s editorial policy.<br><br>	
 
 	3、报纸杂志<br><br>
