--- a/links.html
+++ b/links.html
@@ -60,13 +60,13 @@
 	<b><a name="T1">中国现在富强</a> </b><br>
 	<hr>
  
-<a href= "link01.html">中国崛起的四个问题</a><br><br>
 <a href= "link02.html">中国与1914</a><br><br>
+<a href= "link05.html">“文革”后的逆袭与重续</a><br><br>
+<a href= "link01.html">中国崛起的四个问题</a><br><br>
 <a href= "link03.html">大国不能小心眼</a><br><br>
 <a href= "link04.html">全面推进依法治国</a><br><br>
-<a href= "link05.html">“文革”后的逆袭与重续</a><br><br>
 <a href= "link06.html">图书馆的“阅读规则”</a><br><br>
-
+<a href= "link07.html">宏观经济学的科学家与工程师</a><br><br>
 		
 	<br><a href="#top">返回页首</a><br>
 	<hr>
